# bario

./: .ycm_extra_conf.py  CMakeLists.txt  README.md
include/bario/: Commit.h  Contrast.h
src/: CMakeLists.txt  Commit.cc  Contrast.cc
test/: CMakeLists.txt  Commit.cc  Contrast.cc
